--- a/src/index.njk
+++ b/src/index.njk
@@ -2,4 +2,70 @@
 layout: layouts/base.njk
 title: Title Strings
 ---
-<h1>This is global data: {{siteData.name}}</h1>
+<main class="main">
+  <section class="intro">
+    <h1>Luft & Liebe</h1>
+  </section>
+  <section class="concept">
+    <div class="main-act">
+      <div class="main-act__title">Hauptakt</div>
+      <time class="main-act__date" datetime="">27<span class="main-act__separator">/</span>6<span class="main-act__separator">/</span>20</time>
+    </div>
+    <p>Fünf Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
+  </section>
+  <section class="approach">
+    <h2>Anfahrt nach Südtirol</h2>
+    <p>Wir sind uns bewusst, dass die Anreise nach Südtirol nicht die einfachste ist und wollen sie euch so angenehm wie möglich machen. Solltet ihr Schwierigkeiten haben von A nach B zu kommen oder habt noch einen Platz im Auto frei, den ihr vergeben möchtet, dann gebt uns bitte Bescheid - wir finden für alles eine Lösung!</p>
+    <h3>Mit dem Zug</h3>
+    <ul>
+      <li>Mit ICE nach München</li>
+      <li>Von dort mit dem EC Richtung Bologna/Venezia/Verona bis nach Bozen</li>
+    </ul>
+    <h3>Mit dem Auto</h3>
+    <ul>
+      <li>Bitte versucht Fahrgemeinschaften zu bilden</li>
+      <li>Kostenlose Parkmöglichkeiten an der Schwebeseilbahn in Lana</li>
+    </ul>
+    <h3>Mit dem Flugzeug</h3>
+    <ul>
+      <li>Von HH mit Ryanair nach Bergamo, Verona</li>
+      <li>Von HH nach München mit Lufthansa</li>
+      <li>Von Berlin mit Ryanair nach Bergamo, München</li>
+      <li>Von Berlin nach München mit Lufthansa</li>
+      <li>Von Berlin mit easyjet nach Innsbruck, Malpensa</li>
+    </ul>
+  </section>
+  <section class="hike">
+    <h2>Weg zum Ferienheim</h2>
+    <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
+  </section>
+  <section class="accomodation">
+    <h2>Übernachtungsmöglichkeiten</h2>
+    <h3>Ferienheim</h3>
+    <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfugen über 4-8 Betten und Gemeinschaftsbädern und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Kostenpunkt: freie Spende.</p>
+    <h3>Gampl Family Alm</h3>
+    <p>Die in 5 Gehminuten zu erreichende Gampl Family Alm bietet Appartements für ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr Privacy und Komfort als das Ferienheim. Bitte versucht nicht selbst zu buchen,sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
+    <h3>Vigilius Mountain Luxusresort</h3>
+    <p>Etwa 50 Gehminuten entfernt gibt es noch eine weitere gehobene Übernachtungsmöglichkeit. Das Hotel ist für seinen hohen Standard und dementsprechende Preise bekannt. Bitte bucht eigenständig und gebt uns einfach ein kurzes Update.</p>
+    <hr>
+    <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten.</p>
+  </section>
+  <section class="volunteering">
+    <h2>Volunteering</h2>
+    <h3>Artist Registration</h3>
+    <p>Du hast Bock unser Festival künstlerisch zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder - wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
+    <p>Achtung: solltest du irgendeine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (Anni, Chris, Flo)</p>
+    <h3>Support Workshops</h3>
+    <p>Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können jede helfende Hand brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen. Näheres erfährst du im Newsletter.</p>
+  </section>
+  <section class="presents">
+    <h2>Geschenke</h2>
+    <p>Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden Love-road trip.</p>
+    <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Support Team.</p>
+  </section>
+  <section class="activities">
+    <h2>Freizeitaktivitäten</h2>
+    <p>Es gibt zahlreiche wunderschöne Wanderwege, mal leichter, mal etwas schwieriger direkt vor der Haustür des Ferienheims. Also pack deine Wanderschuhe und etwas Proviant ein, mach dich auf die Socken und erkunde die Natur!</p>
+    <p>Für genügend Spiele, ob drinnen oder draußen, ist gesorgt - lass dich einfach überraschen!</p>
+  </section>
+</main>
