--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html lang="de" class="no-js">
 <head>
   <meta charset="utf-8">
   <script>
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <title>{{ renderData.title or title or metadata.title }}</title>
+  <link rel="stylesheet" href="https://use.typekit.net/xjh1lhw.css">
   <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
