- flex column all content - add logo

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,6 +7,10 @@ title: Title Strings
     <h1>Luft & Liebe</h1>
   </section>
   <section class="concept">
+    <div class="logo">
+      <img class="logo--luft-und-liebe" src="{{ baseurl }}/images/logo--luft-und-liebe.svg" alt="Das Luft & Liebe Logo">
+      <div class="logo__claim">25-29/6/20</div>
+    </div>
     <div class="main-act">
       <div class="main-act__title">Hauptakt</div>
       <time class="main-act__date" datetime="">27<span class="main-act__separator">/</span>6<span class="main-act__separator">/</span>20</time>
