--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,8 +5,9 @@ body {
   line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6,
+h1, h2, h3, h4, h5, h6, p,
 .h1, .h2, .h3, .h4, .h5, .h6 {
+  max-width: 60ch;
   font-weight: 100;
 }
 
@@ -26,6 +27,6 @@ h4 {
   font-size: 1.563em;
 }
 
-h15 {
+h5 {
   font-size: 1.25em;
 }
