- add full height intro section with background and page heading

--- a/src/index.njk
+++ b/src/index.njk
@@ -44,7 +44,7 @@ title: Title Strings
     <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
   </section>
   <section class="accomodation">
-    <h2>Übernachtungsmöglichkeiten</h2>
+    <h2>Unterkünfte</h2>
     <h3>Ferienheim</h3>
     <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfugen über 4-8 Betten und Gemeinschaftsbädern und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Kostenpunkt: freie Spende.</p>
     <h3>Gampl Family Alm</h3>
