--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,6 +3,7 @@ body {
   font-size: calc(1rem + .5vw);
   font-weight: 100;
   line-height: 1.5;
+  color: $c--black;
 }
 
 h1, h2, h3, h4, h5, h6, p,
