--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,10 @@
+@import '_variables.scss';
 @import '_reset.scss';
 @import '_normalize.css';
 @import '_typography.scss';
 @import '_main.scss';
-
-$var: white;
+@import '_intro.scss';
 
 body {
-  background-color: $var;
+  background-color: $c--white;
 }
