--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import '_typography.scss';
 @import '_main.scss';
 @import '_intro.scss';
+@import '_logo.scss';
 
 body {
   background-color: $c--white;
