- move logo svg to includes folder - add gsap - create module for intro animation

--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@ title: Title Strings
   </section>
   <section class="concept">
     <div class="logo">
-      <img class="logo--luft-und-liebe" src="{{ baseurl }}/images/logo--luft-und-liebe.svg" alt="Das Luft & Liebe Logo">
+      {% include "logo--luft-und-liebe.svg" %}
       <div class="logo__claim">25-29/6/20</div>
     </div>
     <div class="main-act">
