--- a/src/index.njk
+++ b/src/index.njk
@@ -7,7 +7,7 @@ title: Title Strings
     <h1>Luft & Liebe</h1>
   </section>
   <section class="concept">
-    <div class="logo">
+    <div id="js-logo" class="logo">
       {% include "logo--luft-und-liebe.svg" %}
       <div class="logo__claim">25-29/6/20</div>
     </div>
