- fix some typos - add vigiljoch map

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Title Strings
+title: Luft & Liebe
 ---
 <main class="main">
   <section class="intro">
@@ -16,6 +16,9 @@ title: Title Strings
       <time class="main-act__date" datetime="">27<span class="main-act__separator">/</span>6<span class="main-act__separator">/</span>20</time>
     </div>
     <p>Fünf Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
+    <div class="registration">
+      <a href="" class="btn btn--primary">Jetzt Anmelden!</a>
+    </div>
   </section>
   <section class="approach">
     <h2>Anfahrt nach Südtirol</h2>
@@ -41,6 +44,9 @@ title: Title Strings
   </section>
   <section class="hike">
     <h2>Weg zum Ferienheim</h2>
+    <a class="img-link" title="Bild öffnen" href="images/map--vigiljoch--anreise.jpg">
+      <img class="map" src="images/map--vigiljoch--anreise.jpg" alt="Eine handgezeichnete Landkarte, die das Gebiet des Vigiljoch zeigt.">
+    </a>
     <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
   </section>
   <section class="accomodation">
@@ -48,11 +54,11 @@ title: Title Strings
     <h3>Ferienheim</h3>
     <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfugen über 4-8 Betten und Gemeinschaftsbädern und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Kostenpunkt: freie Spende.</p>
     <h3>Gampl Family Alm</h3>
-    <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet Appartements für ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr Privacy und Komfort als das Ferienheim. Bitte versucht nicht selbst zu buchen,sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
+    <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet Apartements für ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr Privacy und Komfort als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
     <h3>Vigilius Mountain Luxusresort</h3>
     <p>Etwa 50 Gehminuten entfernt gibt es noch eine weitere gehobene Übernachtungsmöglichkeit. Das Hotel ist für seinen hohen Standard und dementsprechende Preise bekannt. Bitte bucht eigenständig und gebt uns einfach ein kurzes Update.</p>
     <hr>
-    <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten.</p>
+    <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
   </section>
   <section class="volunteering">
     <h2>Volunteering</h2>
