- fix variables - fix some typos - add some images

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ title: Luft & Liebe
   <section class="intro">
     <h1>Luft & Liebe</h1>
   </section>
-  <section class="concept">
+  <section class="concept section">
     <div id="js-logo" class="logo">
       {% include "logo--luft-und-liebe.svg" %}
       <div class="logo__claim">25-29/6/20</div>
@@ -20,9 +20,20 @@ title: Luft & Liebe
       <a href="" class="btn btn--primary">Jetzt Anmelden!</a>
     </div>
   </section>
-  <section class="approach">
+  <section class="approach section section--alt">
     <h2>Anfahrt nach Südtirol</h2>
     <p>Wir sind uns bewusst, dass die Anreise nach Südtirol nicht die einfachste ist und wollen sie euch so angenehm wie möglich machen. Solltet ihr Schwierigkeiten haben von A nach B zu kommen oder habt noch einen Platz im Auto frei, den ihr vergeben möchtet, dann gebt uns bitte Bescheid - wir finden für alles eine Lösung!</p>
+    <div class="travelmaps">
+      <a class="img-link" title="Bild öffnen" href="images/map--europe--train.jpg">
+        <img class="map" src="images/map--europe--train.svg" alt="Eine handgezeichnete Landkarte Europas, die Zugrouten nach Vigiljoch zeigt.">
+      </a>
+      <a class="img-link" title="Bild öffnen" href="images/map--europe--car.jpg">
+        <img class="map" src="images/map--europe--car.svg" alt="Eine handgezeichnete Landkarte Europas, die Autorouten nach Vigiljoch zeigt.">
+      </a>
+      <a class="img-link" title="Bild öffnen" href="images/map--europe--plane.jpg">
+        <img class="map" src="images/map--europe--plane.svg" alt="Eine handgezeichnete Landkarte Europas, die Flugrouten nach Vigiljoch zeigt.">
+      </a>
+    </div>
     <h3>Mit dem Zug</h3>
     <ul>
       <li>Mit ICE nach München</li>
@@ -36,20 +47,22 @@ title: Luft & Liebe
     <h3>Mit dem Flugzeug</h3>
     <ul>
       <li>Von HH mit Ryanair nach Bergamo, Verona</li>
-      <li>Von HH nach München mit Lufthansa</li>
+      <li>Von HH mit Lufthansa nach München</li>
       <li>Von Berlin mit Ryanair nach Bergamo, München</li>
-      <li>Von Berlin nach München mit Lufthansa</li>
+      <li>Von Berlin mit Lufthansa nach München</li>
       <li>Von Berlin mit easyjet nach Innsbruck, Malpensa</li>
+      <li>Von Wien mit Ryanair nach Bergamo</li>
+      <li>Von Wien mit Lufthansa nach Verona</li>
     </ul>
   </section>
-  <section class="hike">
+  <section class="hike section">
     <h2>Weg zum Ferienheim</h2>
     <a class="img-link" title="Bild öffnen" href="images/map--vigiljoch--anreise.jpg">
       <img class="map" src="images/map--vigiljoch--anreise.jpg" alt="Eine handgezeichnete Landkarte, die das Gebiet des Vigiljoch zeigt.">
     </a>
     <p>Jetzt wird es abenteuerlich! Euch erwartet eine kurze Fahrt mit der Schwebeseilbahn von 328 auf 1486 Höhenmetern. Danach entscheidet ihr selbst - entweder eine knapp einstündige Wanderung hoch zum Ferienheim oder etwas bequemer mit dem Sessellift und nur einem kleinen Fußmarsch von 15 Minuten. Belohnt werdet ihr bei beiden Varianten mit herrlichen Ausblicken auf 1747 Metern über dem Meeresspiegel.</p>
   </section>
-  <section class="accomodation">
+  <section class="accomodation section">
     <h2>Unterkünfte</h2>
     <h3>Ferienheim</h3>
     <p>Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfugen über 4-8 Betten und Gemeinschaftsbädern und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Kostenpunkt: freie Spende.</p>
@@ -60,20 +73,20 @@ title: Luft & Liebe
     <hr>
     <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
   </section>
-  <section class="volunteering">
+  <section class="volunteering section">
     <h2>Volunteering</h2>
     <h3>Artist Registration</h3>
     <p>Du hast Bock unser Festival künstlerisch zu unterstützen? Ob auflegen, eigenes Instrument, deine Stimme oder mit Theater, Yoga oder oder - wir freuen uns, wenn du dich einbringen willst. Hier sind deiner Fantasie keine Grenzen gesetzt, es muss nicht das Thema Hochzeit tragen, es soll nur dir und der Kolonie Spaß bringen!</p>
-    <p>Achtung: solltest du irgendeine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (Anni, Chris, Flo)</p>
+    <p>Achtung: solltest du irgend eine Einlage planen, von der wir nichts wissen sollen, dann wende dich bitte an das Luft & Liebe Team (Anni, Chris, Flo)</p>
     <h3>Support Workshops</h3>
     <p>Du hast Lust an den Tagen vor dem Hauptakt tatkräftig anzupacken? Es gibt sicher noch einiges zu tun und wir können jede helfende Hand brauchen, sei es beim Aufbau, in der Küche oder beim Feuer und Stockbrot machen. Näheres erfährst du im Newsletter.</p>
   </section>
-  <section class="presents">
+  <section class="presents section">
     <h2>Geschenke</h2>
     <p>Unser größtes Geschenk ist es, dass du den Weg auf dich nimmst und dabei bist. Wenn du trotzdem etwas schenken magst, dann freuen wir uns über eine Spende für unseren anstehenden Love-road trip.</p>
     <p>Und solltet ihr doch etwas ganz anderes schenken wollen, dann meldet euch einfach beim Luft & Liebe Support Team.</p>
   </section>
-  <section class="activities">
+  <section class="activities section">
     <h2>Freizeitaktivitäten</h2>
     <p>Es gibt zahlreiche wunderschöne Wanderwege, mal leichter, mal etwas schwieriger direkt vor der Haustür des Ferienheims. Also pack deine Wanderschuhe und etwas Proviant ein, mach dich auf die Socken und erkunde die Natur!</p>
     <p>Für genügend Spiele, ob drinnen oder draußen, ist gesorgt - lass dich einfach überraschen!</p>
