--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background: $c--primary;
+  background: $c--green--300;
   font-size: calc(40% + .75vw);
   text-transform: uppercase;
   letter-spacing: 1vw;
