--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,13 @@
 
 
 $c--white: #fff;
-$c--primary: #89958C;
-$c--light: #D7BCAE;
-$c--dark: #50524F;
-$c--gray: #343633;
-$c--black: #1B1C1A;
+$c--black: #1A1D19;
+
+$c--green--100: #343633;
+$c--green--200: #50524F;
+$c--green--300: #89958C;
+$c--green--400: #779E82;
+
+$c--blue--400: #79BCD9;
+
+$c--primary: var($c--green--400);
