--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,16 @@ $c--green--400: #779E82;
 $c--blue--400: #79BCD9;
 
 $c--primary: var($c--green--400);
+
+
+
+$s--50: .25rem;
+$s--100: .5rem;
+$s--200: .75rem;
+$s--300: 1rem;
+$s--400: 1.5rem;
+$s--500: 2rem;
+$s--600: 3rem;
+$s--700: 5rem;
+$s--800: 8rem;
+$s--900: 12rem;
