--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -10,4 +10,9 @@
   text-transform: uppercase;
   letter-spacing: 1vw;
   color: $c--white;
+
+  h1 {
+    font-weight: 100;
+    color: inherit;
+  }
 }
