--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,10 +11,16 @@
 @import '_btn.scss';
 @import '_quote.scss';
 @import '_wrapper.scss';
+@import '_img-link.scss';
+@import '_hoverlay.scss';
 
 body {
   background-color: $c--white;
   overflow-x: hidden;
+}
+
+.divider {
+  max-width: 100%;
 }
 
 // h1,h2,h3,h4,h5,h6,hgroup,
