--- a/src/index.njk
+++ b/src/index.njk
@@ -16,7 +16,7 @@ title: Luft & Liebe
         <div class="main-act__title">Hauptakt</div>
         <time class="main-act__date" datetime="">27<span class="main-act__separator">/</span>6<span class="main-act__separator">/</span>20</time>
       </div>
-      <p>Fünf Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
+      <p class="first-letter">5 Tage ausgelassen feiern, hoch oben auf dem Vigiljoch. Eine Auszeit nehmen vom Trubel des Alltags, etwas Bergluft schnuppern und mit uns am Samstag unsere Liebe zelebrieren. (Fast) alle unter einem Dach, ganz unkompliziert locker flockig erwarten wir euch ab Donnerstag Nachmittag im Ferienheim Vigiljoch, denn wir feiern ein Fest(ival) und freuen uns, dass du dabei bist und vielleicht auch etwas beitragen möchtest.</p>
       <div class="registration">
       <a href="" class="btn btn--primary">Jetzt Anmelden!</a>
     </div>
