--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,6 +1,9 @@
 .section {
   width: 100%;
-  padding: 10vh 5vw;
+}
+
+.section--padded {
+  padding: $s--800 0;
 }
 
 .section--alt {
@@ -25,6 +28,16 @@
   }
 }
 
-.section--quote {
-  padding: 0;
+.section__header {
+  margin-bottom: $s--600;
+}
+
+.section__title,
+.section__subtitle {
+  margin: 0;
+  line-height: 1.2;
+}
+
+.section__subtitle {
+  font-weight: 100;
 }
