--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -19,23 +19,23 @@ h1, h2, h3, h4, h5, h6,
   color: $c--green--100;
 }
 
-h1 {
+h1, .h1 {
   font-size: 3.052em;
 }
 
-h2 {
+h2, .h2 {
   font-size: 2.441em;
 }
 
-h3 {
+h3, .h3 {
   font-size: 1.953em;
 }
 
-h4 {
+h4, .h4 {
   font-size: 1.563em;
 }
 
-h5 {
+h5, .h5 {
   font-size: 1.25em;
 }
 
