--- a/src/index.njk
+++ b/src/index.njk
@@ -88,8 +88,9 @@ title: Luft & Liebe
     </div>
   </section>
   <section class="hike section section--padded">
-    <div class="wrapper--text">
-      <h2>Weg zum Ferienheim</h2>
+    <div class="section__header wrapper--text">
+      <h2 class="section__subtitle h5">Der Weg zum Ferienheim</h2>
+      <div class="section__title h2">Wo wir uns treffen</div>
     </div>
     <a class="img-link" title="Bild öffnen" href="images/map--vigiljoch--anreise.jpg">
       <figure class="hoverlay">
@@ -119,48 +120,47 @@ title: Luft & Liebe
       <img class="ferienheim__img" src="images/foto--ferienheim.jpg" alt="Ein Foto des Ferienheims in Vigiljoch.">
       <p class="ferienheim__text wrapper--text">Das Ferienheim bietet für einen Großteil der Gäste einen Platz zum schlafen. Die Zimmer verfügen über 4-8 Betten und Gemeinschaftsbädern und Warmwasser. Wer dort schläft, ist dem Geschehen am nächsten, mit allen Vor- und Nachteilen ;) Kostenpunkt: freie Spende.</p>
     </div>
-    <div class="wrapper--text">
-      <h3>Gampl Family Alm</h3>
-    </div>
     <div class="gampl">
-      <a title="Bild öffnen" href="images/foto--gampl.jpg">
-        <figure class="hoverlay">
-          <img class="" src="images/foto--gampl.jpg" alt="Ein Foto der Family Alm Gampl">
-          <div class="hoverlay__overlay">
-            <div class="btn btn--primary">Vergrößern</div>
-          </div>
-        </figure>
-      </a>
-      <a title="Bild öffnen" href="images/foto--gampl-zimmer.jpg">
-        <figure class="hoverlay">
-          <img class="" src="images/foto--gampl-zimmer.jpg" alt="Schlafzimmer im Gampl.">
-          <div class="hoverlay__overlay">
-            <div class="btn btn--primary">Vergrößern</div>
-          </div>
-        </figure>
-      </a>
-      <a title="Bild öffnen" href="images/foto--gampl-wohnzimmer.jpg">
-        <figure class="hoverlay">
-          <img class="" src="images/foto--gampl-wohnzimmer.jpg" alt="Wohnzimmer im Gampl.">
-          <div class="hoverlay__overlay">
-            <div class="btn btn--primary">Vergrößern</div>
-          </div>
-        </figure>
-      </a>
-      <a title="Bild öffnen" href="images/foto--gampl-bad.jpg">
-        <figure class="hoverlay">
-          <img class="" src="images/foto--gampl-bad.jpg" alt="Badezimmer im Gampl.">
-          <div class="hoverlay__overlay">
-            <div class="btn btn--primary">Vergrößern</div>
-          </div>
-        </figure>
-      </a>
+      <div class="accommodation__header accommodation__header--gampl wrapper--text">
+        <h3 class="accommodation__title">Gampl Family Alm</h3>
+        <h4 class="accommodation__subtitle h5">Appartments zum Relaxen</h4>
+        <a href="https://www.wirtshaus.it/de/gampl/" class="accomodation__btn btn btn--primary">Zur Website</a>
+      </div>
+      <img class="gampl__img" src="images/foto--gampl.jpg" alt="Ein Foto der Gampl Family Alm.">
+      <div class="gampl__detail-imgs">
+        <img class="gampl__detail-img" src="images/foto--gampl-zimmer.jpg" alt="Schlafzimmer im Gampl.">
+        <img class="gampl__detail-img" src="images/foto--gampl-wohnzimmer.jpg" alt="Wohnzimmer im Gampl.">
+        <img class="gampl__detail-img" src="images/foto--gampl-bad.jpg" alt="Badezimmer im Gampl.">
+      </div>
+    </div>
+    <div class="gampl__text section--alt section--padded">
+      <div class="wrapper--text">
+        <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet Apartements für ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr Privacy und Komfort als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
+      </div>
+    </div>
+
+    <div class="vigilius">
+      <div class="accommodation__header accommodation__header--vigilius wrapper--text">
+        <h3 class="accommodation__title">Vigilius Mountain Luxusresort</h3>
+        <h4 class="accommodation__subtitle h5">Upper Class Lodging</h4>
+        <a href="https://www.vigilius.it/de" class="accomodation__btn btn btn--primary">Zur Website</a>
+      </div>
+      <img class="vigilius__img" src="images/foto--vigilius.jpg" alt="Ein Foto des Vigilius Luxusresorts.">
+    </div>
+
+    <div class="wrapper--text">
+      <p>Etwa 50 Gehminuten entfernt gibt es noch eine weitere gehobene Übernachtungsmöglichkeit. Das Hotel ist für seinen hohen Standard und dementsprechende Preise bekannt. Bitte bucht eigenständig und gebt uns einfach ein kurzes Update.</p>
+    </div>
+  </section>
+  <div class="wrapper--text">
+    {% include "divider.svg" %}
+  </div>
+  <section class="more section--padded">
+    <div class="section__header wrapper--text">
+      <h2 class="section__subtitle h5">Was sind schon 5 Tage...</h2>
+      <div class="section__title h2">Noch Urlaub übrig?</div>
     </div>
     <div class="wrapper--text">
-      <p>Die in fünf Gehminuten zu erreichende Gampl Family Alm bietet Apartements für ca. 30 Leute. Die Wohnungen haben 4-6 Betten (inkl. Schlafsofas), eine wahnsinnig tolle Aussicht und natürlich wesentlich mehr Privacy und Komfort als das Ferienheim. Bitte versucht nicht selbst zu buchen sondern meldet euch bei uns. Wir haben alle verfügbaren Einheiten geblockt.</p>
-      <h3>Vigilius Mountain Luxusresort</h3>
-      <p>Etwa 50 Gehminuten entfernt gibt es noch eine weitere gehobene Übernachtungsmöglichkeit. Das Hotel ist für seinen hohen Standard und dementsprechende Preise bekannt. Bitte bucht eigenständig und gebt uns einfach ein kurzes Update.</p>
-      <hr>
       <p>Wenn ihr außerdem noch rumreisen oder einfach länger in Südtirol bleiben möchtet, gebt uns Bescheid und wir geben euch weitere Tipps zu Übernachtungsmöglichkeiten und Aktivitäten.</p>
     </div>
   </section>
