--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,7 +13,7 @@
 @import '_quote.scss';
 @import '_img-link.scss';
 @import '_hoverlay.scss';
-@import '_gampl.scss';
+// @import '_gampl.scss';
 @import '_accommodation.scss';
 
 body {
