--- a/src/styles/_accommodation.scss
+++ b/src/styles/_accommodation.scss
@@ -1,11 +1,8 @@
 
 .accommodation__header {
+  margin-bottom: $s--400;
   background: $c--white;
   font-size: calc(1rem + .5vw);
-}
-
-.accommodation__header--ferienheim {
-
 }
 
 .accommodation__title,
@@ -18,6 +15,15 @@
   font-weight: 100;
 }
 
+.accomodation__btn {
+  margin-top: $s--300;
+}
+
+.ferienheim,
+.gampl__text {
+  margin-bottom: $s--600;
+}
+
 .ferienheim__text {
   position: relative;
   padding: calc(1.5rem + .2vw);
@@ -28,11 +34,18 @@
   }
 }
 
+.gampl__img,
+.gampl__detail-img {
+  display: block;
+  margin: $s--300 auto;
+}
+
 @media (min-width: 64rem) {
   .ferienheim {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     align-items: center;
+    margin-bottom: $s--800;
   }
 
   .accommodation__header--ferienheim {
@@ -54,5 +67,59 @@
     margin: 0;
     background: $c--green--300;
     color: $c--white;
+  }
+
+  .gampl {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    align-items: center;
+  }
+
+  .accommodation__header--gampl {
+    position: relative;
+    grid-column: 7 / 10;
+    grid-row-start: 2;
+    padding: $s--500;
+  }
+
+  .gampl__img {
+    width: 100%;
+    margin: 0;
+    grid-column: 1 / 11;
+    grid-row: 1 / 4;
+  }
+
+  .gampl__detail-imgs {
+    grid-column: 2 / 6;
+    grid-row: 1 / 4;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 0 $s--600;
+    background: $c--green--100;
+  }
+
+  .gampl__text {
+    margin-bottom: 0;
+  }
+
+  .vigilius {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    margin-bottom: $s--800;
+  }
+
+  .vigilius__img {
+    grid-column: 1 / 11;
+    grid-row: 1 / 3;
+  }
+
+  .accommodation__header--vigilius {
+    position: relative;
+    grid-column: 2 / 5;
+    grid-row: 2 / 3;
+    margin-bottom: 0;
+    padding: $s--600;
   }
 }
