--- a/src/styles/_gampl.scss
+++ b/src/styles/_gampl.scss
@@ -1,30 +1,30 @@
 
-.gampl {
-  @media (min-width: 64rem) {
-    display: grid;
-    grid-gap: $s--300;
-    grid-template-columns: 1fr 1fr 2fr 2fr 1fr 1fr 2fr 2fr 1fr 1fr;
-
-    > :nth-child(1) {
-      grid-column: 2 / 6;
-      grid-row: 1 / 4;
-    }
-
-    > :nth-child(n + 2) {
-      grid-column: 1 / 2;
-    }
-
-    > :nth-child(2) {
-      grid-row: 1 / 2;
-      margin-top: $s--400;
-    }
-
-    > :nth-child(3) {
-      grid-row: 2 / 3;
-    }
-
-    > :nth-child(4) {
-      grid-row: 3 / 4;
-    }
-  }
-}
+// .gampl {
+//   @media (min-width: 64rem) {
+//     display: grid;
+//     grid-gap: $s--300;
+//     grid-template-columns: 1fr 1fr 2fr 2fr 1fr 1fr 2fr 2fr 1fr 1fr;
+//
+//     > :nth-child(1) {
+//       grid-column: 2 / 6;
+//       grid-row: 1 / 4;
+//     }
+//
+//     > :nth-child(n + 2) {
+//       grid-column: 1 / 2;
+//     }
+//
+//     > :nth-child(2) {
+//       grid-row: 1 / 2;
+//       margin-top: $s--400;
+//     }
+//
+//     > :nth-child(3) {
+//       grid-row: 2 / 3;
+//     }
+//
+//     > :nth-child(4) {
+//       grid-row: 3 / 4;
+//     }
+//   }
+// }
