--- a/src/styles/_accommodation.scss
+++ b/src/styles/_accommodation.scss
@@ -113,6 +113,7 @@
   .vigilius__img {
     grid-column: 1 / 11;
     grid-row: 1 / 3;
+    width: 100%;
   }
 
   .accommodation__header--vigilius {
