--- a/src/styles/_accommodation.scss
+++ b/src/styles/_accommodation.scss
@@ -118,9 +118,13 @@
 
   .accommodation__header--vigilius {
     position: relative;
-    grid-column: 2 / 5;
+    grid-column: 2 / 6;
     grid-row: 2 / 3;
     margin-bottom: 0;
     padding: $s--600;
+
+    > * {
+      hyphens: none;
+    }
   }
 }
